objects/User.object
<CustomObject>
    <fields>
        <fullName>ADM_User_ID__c</fullName>
        <description>This field Consist of ADM Org User IDs.</description>
        <externalId>true</externalId>
        <label>ADM User ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADM_User_Type__c</fullName>
        <description>This field is used to identify the specific ADM Type User.</description>
        <inlineHelpText>This field is used to identify the specific ADM Type User.</inlineHelpText>
        <label>ADM User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Sales Engineer Manager</fullName>
                </value>
                <value>
                    <fullName>Distribution Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Demand Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APAC_Office__c</fullName>
        <label>APAC Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Hongkong</fullName>
                </value>
                <value>
                    <fullName>Kawasaki</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>malaysia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shenzhen</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APL_Regional_Sale_Leader__c</fullName>
        <label>APL Regional Sales Leader</label>
        <relationshipName>APLRegionalSales</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>APL_Sales_manager_Region__c</fullName>
        <label>APL Sales manager Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_User1__c</fullName>
        <label>Alternate User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_User__c</fullName>
        <label>Alternate User</label>
        <relationshipName>user</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Assignment_Group_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Can this user be assigned records in the Assignment Group process.  Uncheck to mark this use as inactive on all assignment groups</inlineHelpText>
        <label>Assignment Group Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CJM_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the user is part of the CJM Team</description>
        <inlineHelpText>Check this box if the user is part of the CJM Team and will be receiving MQLs and nurturing Leads</inlineHelpText>
        <label>CJM Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSD_Forecast_Delegation__c</fullName>
        <description>used to set access for other user to edit forecast for current users.</description>
        <inlineHelpText>used to set access for other user to edit forecast for current users.</inlineHelpText>
        <label>DND Forecast Delegation</label>
        <relationshipName>CSD_Forecast_Delegation</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>CSD_Region__c</fullName>
        <label>CSD Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>South Asia(Pacific)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Central_Org_Courtesy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether this license is or needs to be setup on Central Org as a courtesy</description>
        <label>Central Org Courtesy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Report__c</fullName>
        <formula>IF( ManagerId =  $User.Id, FirstName &amp; &quot; &quot; &amp; LastName, 
IF( Manager.ManagerId =  $User.Id, Manager.FirstName &amp; &quot; &quot; &amp; Manager.LastName,
IF( Manager.Manager.ManagerId =  $User.Id, Manager.Manager.FirstName &amp; &quot; &quot; &amp; Manager.Manager.LastName,
IF( Manager.Manager.Manager.ManagerId =  $User.Id, Manager.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Manager.Manager.Manager.LastName,
IF( Manager.Manager.Manager.Manager.ManagerId = $User.Id,  Manager.Manager.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Manager.Manager.Manager.Manager.LastName,
IF( Manager.Manager.Manager.Manager.Manager.ManagerId = $User.Id, Manager.Manager.Manager.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Manager.Manager.Manager.Manager.Manager.LastName,
IF( Manager.Manager.Manager.Manager.Manager.Manager.ManagerId =  $User.Id ,  Manager.Manager.Manager.Manager.Manager.Manager.FirstName &amp; &quot; &quot; &amp; Manager.Manager.Manager.Manager.Manager.Manager.LastName , &quot;NA&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_send_survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not send survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Signature__c</fullName>
        <label>Email Signature</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <description>User Record Id from Energy Prod system for tracking.</description>
        <externalId>true</externalId>
        <inlineHelpText>User Record Id from Energy Prod system for tracking.</inlineHelpText>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expiration_date__c</fullName>
        <label>Expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GIBU__c</fullName>
        <description>Used to help with tallying license counts and things like that.</description>
        <inlineHelpText>Select the GIBU/BU this user is from.</inlineHelpText>
        <label>GIBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD&amp;M</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Circuit Protection</fullName>
                </value>
                <value>
                    <fullName>Consumer Devices</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>GATD</fullName>
                </value>
                <value>
                    <fullName>ICT (Ind Comm Transport)</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PIC</fullName>
                </value>
                <value>
                    <fullName>Sensors</fullName>
                </value>
                <value>
                    <fullName>TEIS</fullName>
                </value>
                <value>
                    <fullName>TEIS Engineering Portfolio Mgmt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grouped_Account_Code__c</fullName>
        <description>This is used for dynamic filtering in reports and should be populated manually.</description>
        <inlineHelpText>In case a user is assigned to a grouped account (e.g. global account or grouped B account), populate this field with the GAM code assigned in TED.</inlineHelpText>
        <label>Grouped Account Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW1__Can_Save_Public_Call_Plan_Templates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether or not the user has the ability to save Call Plan Templates as public.</description>
        <inlineHelpText>Defines whether or not the user has the ability to save Call Plan Templates as public.</inlineHelpText>
        <label>Can Save Public Call Plan Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_Report_Dashboard_Roles__c</fullName>
        <description>This field is used by the Industrial Admins for there Report and Dashboard User interface. Please do not update this filed if you are not the part of Industrial admin or if you do not contacted the  BU admins.</description>
        <inlineHelpText>This field is used by the Industrial Admins for there Report and Dashboard User interface. Please do not update this filed if you are not the part of Industrial admin or if you do not contacted the  BU admins.</inlineHelpText>
        <label>IND Report &amp; Dashboard Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>GAM</fullName>
                </value>
                <value>
                    <fullName>AM.</fullName>
                </value>
                <value>
                    <fullName>FE</fullName>
                </value>
                <value>
                    <fullName>Marketing and Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_PIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PIC - to easily determine whether a user is PIC or not for mass user updates, admin set</description>
        <inlineHelpText>PIC - to easily determine whether a user is PIC or not for mass user updates, admin set</inlineHelpText>
        <label>Is PIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Role_Category__c</fullName>
        <description>This Field is created by Industrial BU Admin and it  is used by Training App to invite the users based on there job role for the training.</description>
        <inlineHelpText>This Field is used by Training App to invite the users based on there job role for the training.</inlineHelpText>
        <label>Job Role Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Channel Field Engineer</fullName>
                </value>
                <value>
                    <fullName>Distribution Sales Engineer (DSE)</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
                <value>
                    <fullName>Field Application Engineer (FAE)</fullName>
                </value>
                <value>
                    <fullName>Field Engineer</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Global Account Manager</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IND Channel Lead</fullName>
                </value>
                <value>
                    <fullName>Industry Marketing Manager (IMM)</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Sales Engineer</fullName>
                </value>
                <value>
                    <fullName>Sales Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MED_Region__c</fullName>
        <description>Assign one of these regions to all those with GIBU=Medical.  These values correspond to how Medical districts are broken out.</description>
        <inlineHelpText>Assign one of these regions to all those with GIBU=Medical.</inlineHelpText>
        <label>MED Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas North</fullName>
                </value>
                <value>
                    <fullName>Americas South</fullName>
                </value>
                <value>
                    <fullName>Aus / New Zlnd</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_s_email__c</fullName>
        <formula>Manager.Email</formula>
        <label>Manager&apos;s email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_Code__c</fullName>
        <description>This field contains the Market Manager Code.</description>
        <label>Market Manager Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_Role__c</fullName>
        <description>This field contains the market manager role. It is used to define the account team role of a market manager.</description>
        <label>Market Manager Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePaks__MobilePaks_Tags__c</fullName>
        <description>Note: requires the “Enabled in Veelo” box to be checked. Pick from this list to set the words as tags for this user within the category SFDC Tags.</description>
        <inlineHelpText>Note: requires the “Enabled in MobilePaks” box to be checked. Pick from this list to set the words as tags for this user within the category SFDC Tags.</inlineHelpText>
        <label>Veelo Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demo Circle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobilePaks__enable_mobilepaks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking the box for this user will automatically create a Veelo account for them. Unchecking this box will deactivate their Veelo account.</description>
        <inlineHelpText>Checking the box for this user will automatically create a MobilePaks account for them. Unchecking this box will deactivate their MobilePaks account.</inlineHelpText>
        <label>Enabled In Veelo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_TE_Corporate_Directory__c</fullName>
        <description>&quot;Open TE Corporate Directory&quot;</description>
        <formula>IF(NOT(ISBLANK(EmployeeNumber)),HYPERLINK(&quot;http://phone.tycoelectronics.com/employeeprofiles/default.aspx?myProfileID=&quot; &amp; EmployeeNumber ,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_blank&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open TE Corporate Directory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIC_Role_Groups__c</fullName>
        <description>PIC Grouping for reporting purposes</description>
        <formula>IF(CONTAINS(UserRole.Name, &quot;PIC EMEA Agents&quot;), &quot;PIC Emea&quot;,
IF(CONTAINS(UserRole.Name, &quot;PIC APAC Agents&quot;), &quot;PIC China&quot;,
IF(CONTAINS(UserRole.Name, &quot;PIC AMER Agents&quot;), &quot;PIC US&quot;,
IF(CONTAINS(UserRole.Name, &quot;PIC Germany (Temp solution)&quot;), &quot;PIC German&quot;,
IF(CONTAINS(UserRole.Name, &quot;PIC EMEA Supervisors &amp; Managers&quot;), &quot;PIC EMEA Supervisors/Managers&quot;,
IF(CONTAINS(UserRole.Name, &quot;PIC APAC Supervisors/Managers&quot;), &quot;PIC APAC Supervisors/Managers&quot;,
IF(CONTAINS(UserRole.Name, &quot;PIC AMER Supervisors/Managers&quot;), &quot;PIC AMER Supervisors/Managers&quot;,
IF(CONTAINS(UserRole.Name, &quot;PIC APAC RL/Directors&quot;), &quot;PIC APAC RL/Directors&quot;,
IF(CONTAINS(UserRole.Name, &quot;PIC EMEA RL/Directors&quot;), &quot;PIC EMEA RL/Directors&quot;,
IF(CONTAINS(UserRole.Name, &quot;Inside Sales&quot;), &quot;PIC Inside Sales&quot;,
IF(CONTAINS(UserRole.Name, &quot;Global Admin&quot;), &quot;PIC Global Admin&quot;,
&quot;N/A&quot;)))))))))))</formula>
        <label>PIC Role Groups</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Role_to_Region__c</fullName>
        <formula>IF(
AND(
CONTAINS(UserRole.Name, &quot;PIC&quot;), 
CONTAINS(UserRole.Name, &quot;EMEA&quot;)),
&quot;EMEA&quot;,

IF( 
AND(
CONTAINS(UserRole.Name, &quot;PIC&quot;), 
CONTAINS(UserRole.Name, &quot;AP&quot;)), &quot;APAC&quot;,

IF(
AND(CONTAINS(UserRole.Name, &quot;PIC&quot;), 
CONTAINS(UserRole.Name, &quot;AMER&quot;)), &quot;US&quot;, &quot;NON-PIC&quot;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PIC Role to Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Send_case_notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used by PIC processes to decide if the agent wants to get the email notifications or not</description>
        <inlineHelpText>used by PIC processes to decide if the agent wants to get the email notifications or not</inlineHelpText>
        <label>PIC Send case notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLM_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to tell if the Push project to plm can be done by this user</description>
        <label>PLM User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMV_Type_Initialization__c</fullName>
        <formula>IF( Country  = &apos;China&apos;, &apos;China&apos;, &apos;Standard&apos;)</formula>
        <label>PMV Type Initialization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Hours__c</fullName>
        <description>Used for PIC to set default business hours on case based on the case owner.</description>
        <label>Primary Business Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PIC - China</fullName>
                </value>
                <value>
                    <fullName>PIC - France</fullName>
                </value>
                <value>
                    <fullName>PIC - Germany</fullName>
                </value>
                <value>
                    <fullName>PIC - Italy</fullName>
                </value>
                <value>
                    <fullName>PIC - Spain/Portugal</fullName>
                </value>
                <value>
                    <fullName>PIC - US</fullName>
                </value>
                <value>
                    <fullName>PIC - EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Sales_Territory__c</fullName>
        <label>Primary Sales Territory</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <formula>CASESAFEID(ProfileId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Language__c</fullName>
        <label>Quote Languag</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <inlineHelpText>Note : This field is used for updating the Sales Director in Opportunity. To update this field please contact System Admin EMEA</inlineHelpText>
        <label>RSD Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WEST EUROPE</fullName>
                </value>
                <value>
                    <fullName>SOUTH EUROPE</fullName>
                </value>
                <value>
                    <fullName>MEA</fullName>
                </value>
                <value>
                    <fullName>NORDIC</fullName>
                </value>
                <value>
                    <fullName>CIS/RUSSIA</fullName>
                </value>
                <value>
                    <fullName>GERMANY</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>UK/MEA DSS</fullName>
                </value>
                <value>
                    <fullName>ANZPAC</fullName>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>SWITZERLAND</fullName>
                </value>
                <value>
                    <fullName>UK, SPAIN &amp; BENELUX</fullName>
                </value>
                <value>
                    <fullName>EAST EUROPE</fullName>
                </value>
                <value>
                    <fullName>UK &amp; BENELUX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#0B6FCE</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>India</fullName>
                    <color>#E27001</color>
                    <label>India</label>
                </value>
                <value>
                    <fullName>Americas</fullName>
                    <color>#419249</color>
                    <label>Americas</label>
                </value>
                <value>
                    <fullName>China</fullName>
                    <color>#00CCCC</color>
                    <label>China</label>
                </value>
                <value>
                    <fullName>Japan</fullName>
                    <color>#CC0000</color>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                    <color>#641CCF</color>
                    <label>Asia Pacific</label>
                </value>
                <value>
                    <fullName>Others</fullName>
                    <color>#AFCADF</color>
                    <label>Others</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <description>this field is used in the IND Sample request process flow</description>
        <formula>UserRole.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPIN_Type_Initialization__c</fullName>
        <formula>IF( Country  = &apos;China&apos;, &apos;China&apos;, &apos;Standard&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPIN Type Initialization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sub_Vertical__c</fullName>
        <inlineHelpText>Please enter a sub-vertical BU for each user. This is used for BBB and opportunity reporting by profit center.</inlineHelpText>
        <label>Sub-Vertical BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aero Def &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Circuit Protection</fullName>
                </value>
                <value>
                    <fullName>Consumer Devices</fullName>
                </value>
                <value>
                    <fullName>Data and Devices</fullName>
                </value>
                <value>
                    <fullName>DataComm</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networks</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>M/A-Com WSB</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Non-TE/Divested Prod</fullName>
                </value>
                <value>
                    <fullName>NS Central Services</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Systems</fullName>
                </value>
                <value>
                    <fullName>TEBS</fullName>
                </value>
                <value>
                    <fullName>Telecom Networks</fullName>
                </value>
                <value>
                    <fullName>Touch Solutions</fullName>
                </value>
                <value>
                    <fullName>Unident Customers</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Network_UserID__c</fullName>
        <label>TE Network UserID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Assignment_Group_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Can this user be assigned records in the Assignment Group process.  Uncheck to mark this use as inactive on all assignment groups</inlineHelpText>
        <label>Assignment Group Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__User_License_Type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <label>User License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_Network_UserID__c</fullName>
        <label>TE Network UserID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>